--- a/Homepage/public/style.css
+++ b/Homepage/public/style.css
@@ -12,7 +12,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url('lebah3.jpg') no-repeat;
+    background: url('image/lebah3.jpg') no-repeat;
     background-size: cover;
     background-position: center;
 
